[gd_scene load_steps=8 format=2]

[ext_resource path="res://components/config/config_templates/component_config_array_element.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/icon_128_duplicate.svg" type="Texture" id=2]
[ext_resource path="res://assets/icons/icon_128_delete_trashcan.svg" type="Texture" id=3]
[ext_resource path="res://assets/icons/icon_128_add.svg" type="Texture" id=4]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/icons/icon_128_to_null.svg" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 10.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.0392157, 0.145098, 0.247059, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="TemplateArrayElement" type="PanelContainer"]
margin_top = 190.0
margin_right = 1900.0
margin_bottom = 236.0
custom_styles/panel = SubResource( 8 )
script = ExtResource( 1 )

[node name="Box" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 5.0
margin_right = 1895.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="Header" type="HBoxContainer" parent="Box"]
margin_right = 1885.0
margin_bottom = 33.0

[node name="Description" type="Label" parent="Box/Header"]
margin_top = 6.0
margin_right = 300.0
margin_bottom = 26.0
rect_min_size = Vector2( 300, 0 )
text = "Description"

[node name="OverridenLabel" type="Label" parent="Box/Header"]
visible = false
margin_left = 304.0
margin_top = 9.0
margin_right = 451.0
margin_bottom = 24.0
theme_type_variation = "LabelSmall"
custom_colors/font_color = Color( 0.803922, 0.631373, 0.109804, 1 )
text = "(overriden by external config)"

[node name="VarValueIsNull" type="Label" parent="Box/Header"]
visible = false
modulate = Color( 1, 1, 1, 0.439216 )
margin_left = 455.0
margin_top = 6.0
margin_right = 1116.0
margin_bottom = 26.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
theme_type_variation = "LabelCode"
text = "= null"

[node name="Control" type="Control" parent="Box/Header"]
margin_left = 304.0
margin_right = 1782.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="DuplicateButton" parent="Box/Header" instance=ExtResource( 5 )]
margin_left = 1786.0
margin_right = 1819.0
hint_tooltip = "Duplicate Element"
icon_tex = ExtResource( 2 )
icon_margin = 3

[node name="DeleteButton" parent="Box/Header" instance=ExtResource( 5 )]
margin_left = 1823.0
margin_right = 1856.0
hint_tooltip = "Delete Element"
icon_tex = ExtResource( 3 )
icon_margin = 3

[node name="ButtonSetToNull" parent="Box/Header" instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.235294 )
margin_left = 1860.0
margin_right = 1885.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "To null"
size_flags_vertical = 5
flat = true
icon_tex = ExtResource( 6 )
icon_margin = 3

[node name="ButtonAddValue" parent="Box/Header" instance=ExtResource( 5 )]
visible = false
margin_left = 1852.0
margin_right = 1885.0
margin_bottom = 34.0
hint_tooltip = "Add Value"
icon_tex = ExtResource( 4 )
icon_margin = 3

[node name="HSeparator" type="HSeparator" parent="Box"]
modulate = Color( 1, 1, 1, 0.25098 )
margin_top = 37.0
margin_right = 1885.0
margin_bottom = 41.0

[node name="Content" type="VBoxContainer" parent="Box"]
margin_top = 45.0
margin_right = 1885.0
margin_bottom = 45.0
size_flags_horizontal = 3

[connection signal="pressed" from="Box/Header/DuplicateButton" to="." method="_on_DuplicateButton_pressed"]
[connection signal="pressed" from="Box/Header/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="Box/Header/ButtonSetToNull" to="." method="_on_ButtonSetToNull_pressed"]
[connection signal="pressed" from="Box/Header/ButtonAddValue" to="." method="_on_ButtonAddValue_pressed"]
